@@ -1,3 +1,7 @@
+2012-01-02 Tue  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-batch-devel-lint-lisp): New.
+
 2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-lint-extra-buffer-main): Turn on
